--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //Bmob的maven仓库地址--必填
+        maven {url 'https://dl.bintray.com/chaozhouzhang/maven' }
     }
 }
 
